unfinished help command

--- a/src/example-config.json
+++ b/src/example-config.json
@@ -1,5 +1,5 @@
 {
-    "prefix": "p!",
+    "prefix": "pow ",
     "token": "your.token.here",
     "ownerID": "your discord user ID here, enable Developer Mode on Discord and right click on your avatar",
     "blacklistedIDs": [358325195443798020]
